# tart2ms

./: .gitignore  CHANGES.md  CITATION.cff  MANIFEST.in  Makefile  Makefile.venv  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy_module.yaml  testing.yaml
barber/: __init__.py  casa_read_ms.py
docker/: Dockerfile  Makefile  README.md  docker-compose.yml
examples/: .gitignore
examples/movie/: .gitignore  Makefile  README.md  create_h5_ms.sh  download_tart_data.sh  get_s3_data.py  wsclean_image_create.sh
tart2ms/: __init__.py  casa_read_ms.py  fixvis.py  ms_helper.py  named_phasings.json  read_ms.py  tart2ms.py  util.py
tart2ms/catalogs/: 3CRR  MeerKAT_gaincal_list  catalog_reader.py
tart2ms/scripts/: tart2ms.py
tart2ms/tests/: test_catalogs.py  test_fetch_sources.py  test_predict_model.py  test_read_ms.py  test_source_table.py  test_synthesize_uvw.py  test_tart2ms.py
test_data/: vis_2026-06-12_04_25_46.149086.hdf
