[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tart2ms"
version = '0.7.0rc2'
description = "Convert TART observation data to Measurement Sets"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Tim Molteno", email = "tim@elec.ac.nz" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # "astropy; python_version>=\"3.12\"",
    # "astropy<=5.3.4; python_version<\"3.10\"",
    # "astropy<=7.0.0; python_version>=\"3.10\" and python_version<\"3.12\"",
    # "dask-ms<=0.2.10; python_version<\"3.10\"",
    # "dask; python_version>=\"3.12\"",
    # "dask<=2023.5.0; python_version<\"3.10\"",
    # "dask<=2024.10.0; python_version>=\"3.10\" and python_version<\"3.13\"",
    # "dask_ms; python_version>=\"3.12\"",
    # "dask_ms<=0.2.21; python_version>=\"3.10\" and python_version<\"3.13\"",
    # "h5py",
    # "numpy; python_version>=\"3.12\"",
    # "numpy<2.0; python_version>=\"3.10\" and python_version<\"3.12\"",
    # "pandas; python_version>=\"3.12\"",
    # "pandas<=2.2.3; python_version>=\"3.10\" and python_version<\"3.12\"",
    # "progress",
    # "python-casacore; python_version>=\"3.12\"",
    # "python-casacore<=3.6.1; python_version<\"3.12\"",
    # "python-casacore>3.6.1; python_version<\"3.10\"",
    # "requests",
    # "scipy; python_version>=\"3.12\"",
    # "scipy<=1.10.1; python_version<\"3.10\"",
    # "scipy<=1.15.1; python_version>=\"3.10\" and python_version<\"3.12\"",
    "tart >= 1.4.0",
    "tart_tools >= 1.4.0",
    "astropy (>=7.1.0,<8.0.0)",
    "dask-ms (>=0.2.0,<0.3.0)",
    "h5py (>=3.1.0,<4.0.0)",
    "numpy (>=1.6.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "progress (>=1.6.1,<2.0.0)",
    "python-casacore (>=3.7.1,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[project.optional-dependencies]
predict = [
    "numba (>=0.61,<0.62.0)",
    "codex-africanus (>=0.3.4)"
]

[tool.poetry.scripts]
tart2ms = "tart2ms.scripts.tart2ms:main"

[project.urls]
Homepage = "http://github.com/tart-telescope/tart2ms"

[tool.hatch.version]
path = "tart2ms/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tart2ms",
]
