[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tart2ms"
version = '0.7.4'
description = "Convert TART observation data to Measurement Sets"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Tim Molteno", email = "tim@elec.ac.nz" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tart >= 1.4.0",
    "tart_tools >= 1.4.0",
    "astropy (>=7.1.0,<8.0.0)",
    "dask-ms (>=0.2.0,<0.3.0)",
    "h5py (>=3.1.0,<4.0.0)",
    "numpy (>=1.6.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "progress (>=1.6.1,<2.0.0)",
    "python-casacore (>=3.7.1,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "codex-africanus (>=0.4.2,<0.5)"
]

# [project.optional-dependencies]
# predict = [
#     "codex-africanus (>=0.4.2,<0.5)"
# ]

[project.scripts]
tart2ms = "tart2ms.scripts.tart2ms:main"

[project.urls]
Homepage = "http://github.com/tart-telescope/tart2ms"

[tool.hatch.version]
path = "tart2ms/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tart2ms",
]
